# Reggie-the-Regex-Parser

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  index.html  list.c  list.h  nfa.c  nfa.h  params.json  regex_grammar.txt  strings.h
include/: Collection.h  Reggie.h
include/Collection/: list.h  list_sort.h  map.h  stream.h  strings.h  symbol.h  vector.h
include/Reggie/: automata.h  automata_copy.h  automata_eval.h  automata_operations.h  nfa.h  nfa_builder.h  nfa_copy.h  nfa_create.h  nfa_eval.h  nfa_operations.h  nfa_useful.h  pda.h  pda_copy.h  pda_eval.h  regex_parser.h  regex_tokenizer.h  regex_tokenizer_nfa.h  reggie.h
src/: list.c  list.h  list_sort.c  map.c  map.h  nfa.c  nfa.h  nfa_builder.c  nfa_builder.h  nfa_copy.c  nfa_copy.h  nfa_create.c  nfa_create.h  nfa_eval.c  nfa_eval.h  nfa_operations.c  nfa_operations.h  nfa_parsing_eval.c  nfa_parsing_eval.h  nfa_traversal.c  nfa_traversal.h  nfa_useful.c  nfa_useful.h  pda.c  pda.h  pda_eval.c  pda_eval.h  regex_parser.c  regex_parser.h  regex_tokenizer.c  regex_tokenizer.h  regex_tokenizer_nfa.c  regex_tokenizer_nfa.h  reggie.c  reggie.h  strings.c  strings.h
src/Collection/: CMakeLists.txt  list.c  list_sort.c  map.c  stream.c  strings.c  symbol.c  vector.c
src/Reggie/: CMakeLists.txt  automata.c  automata_copy.c  automata_eval.c  automata_operations.c  nfa.c  nfa_builder.c  nfa_copy.c  nfa_create.c  nfa_eval.c  nfa_operations.c  nfa_parsing_eval.c  nfa_useful.c  pda.c  pda_copy.c  pda_eval.c  regex_parser.c  regex_tokenizer.c  regex_tokenizer_nfa.c  reggie.c
test/: list-test.c  list-test.h  map-test.c  map-test.h  nfa-test.c  nfa-test.h  nfa_copy-test.c  nfa_copy-test.h  nfa_eval-test.c  nfa_eval-test.h  nfa_operations-test.c  nfa_operations-test.h  nfa_parsing_eval-test.c  nfa_parsing_eval-test.h  reggie-test.c  reggie-test.h  strings-test.c  strings-test.h  tester.c  tester.h
testsrc/: CMakeLists.txt  list-test.c  map-test.c  nfa-test.c  nfa_copy-test.c  nfa_eval-test.c  nfa_operations-test.c  nfa_parsing_eval-test.c  pda-test.c  pda_copy-test.c  pda_eval-test.c  pda_instances.h  reggie-test.c  strings-test.c  tester.h
